--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <div id="calculator">
         <div id="result">
           <div id="history">
-            <p id="history-value">54</p>
+            <p id="history-value"></p>
           </div>
           <div id="output">
-            <p id="output-value">42</p>
+            <p id="output-value"></p>
           </div>
         </div>
         <div id="keyboard">
